--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,9 @@ div{
     text-align: right;
 }
 
-/* #yellow p{
+#yellow p{
     color: black;
-} */
+} 
 
 #yellow h2{
     color: black;
@@ -65,4 +65,5 @@ footer{
     padding-bottom: 10px;
     padding-right: 10px;
     padding-top: 0px;
+    padding-left: 0px;
 }
