--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ div{
 
 #yellow h2{
     color: black;
-    text-shadow: 5px 5px 2px #808080;
+    text-shadow: 5px 5px 2px #c7e2c7;
 }
 
 #green{
@@ -60,7 +60,7 @@ div{
     text-align: left;
 }
 
-footer{
+footer p{
     text-align: right;
     padding-bottom: 10px;
     padding-right: 10px;
